# arabic_llm_pipeline

./: .env.staging  .gitignore  PR_DESCRIPTION.md  README.md  architecture.md  docker-compose.staging.yml
backend/: Dockerfile  Procfile  buildpack.toml  fly.toml  pyproject.toml  render.yaml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: document.py  ocr.py
backend/app/db/: session.py
backend/app/models/: document.py  extracted_text.py  user.py
backend/app/models/__init__/: __init__.py
backend/app/schemas/: __init__.py  document.py  extracted_text.py
backend/app/scripts/: seed_demo_data.py
backend/app/services/ocr/: ocr_service.py
backend/app/services/upload/: document_service.py
backend/app/utils/: pdf_utils.py  storage.py
backend/tests/: conftest.py
backend/tests/api/: test_document.py  test_ocr.py
docs/: implementation_plan.md
docs/architecture/: phase1_implementation.md
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx
frontend/src/components/upload/: DocumentList.tsx  FileUploader.tsx
frontend/src/pages/upload/: UploadPage.tsx
frontend/src/services/api/: documentService.ts
scripts/: deploy_staging.sh
test_files/: create_arabic_test_pdfs.py  create_test_pdf.py
